VERSION : 2023_01_20


20/1/23 (EP) : update page Kokeliko et chiffres (salariés, services civiques...)

2/7/21 (EP) : Bugfix formulaire contact => envoi sur nouvelle adresse contact@maintendue31.org

18/12/20 (EP) : Bugfix de la page accueil, encart Facebook tout en bas, ne s'affichait plus

18/12/20 (EP) : Ajouté nouvelle vidéo nov. 2020 de présentation de l'association
	- à la fois dans l'espace Multimedia/video et sur la page d'accueil
	- profité pour améliorer et refactoriser la page /video/index.php
	- refactorisation des éléments généraux (comme les nouvelles vidéos gérées dans un array) dans page /tools/bdd_connect.php