@@ -1,6 +1,6 @@
 <div class="footer-copyright">
     © <?="2003-".date("Y")?> Tous droits réservés - Main Tendue 31
-    <div class="footer-lastupdate"><i>Version 20-01-2023</i></div>
+    <div class="footer-lastupdate"><i>Version 17-05-2023 (php8 ok)</i></div>
 </div>
 <div class="footer-mentions"><a href="/mentions">Mentions légales</a></div>
 <div class="footer-credits"><span class="credits">Par Etienne.P <p>(& Melody, KouassiWeb, David.B)</span></div>
